Tue Feb 12 01:21:34 2002  Yukihiro Matsumoto  <matz@ruby-lang.org>

	* parse.y (assignable): should emit CVASGN within the method
	  body.

Sun Feb 10 16:52:53 2002  Nobuyoshi Nakada  <nobu.nakada@nifty.ne.jp>

	* ruby.c (load_file): avoid SEGV on '#' only input.

Fri Feb  8 23:07:23 2002  Yukihiro Matsumoto  <matz@ruby-lang.org>

	* eval.c (rb_eval): singleton chech should be moved from yycompile
	  to here.

	* eval.c (is_defined): check should be added here too.

Fri Feb  8 05:39:15 2002  Minero Aoki  <aamine@loveruby.net>

	* lib/net/http.rb: HTTP.Proxy should use self for proxy-class's
	  super class.

	* lib/net/http.rb: initialize HTTP.proxy_port by HTTP.port.

Fri Feb  8 01:27:33 2002  Yukihiro Matsumoto  <matz@ruby-lang.org>

	* parse.y (yycompile): should inherit "in_single" if eval happened
	  in a singleton method.

	* eval.c (rb_eval): class variables from singleton methods defined
	  within singleton class statement should work like ones defined
	  by sington def statements.

Thu Feb 07 13:44:08 2002  akira yamada  <akira@arika.org>

	* uri/common.rb (URI::join): new method.

	* uri/generic.rb (Generic#merge): URI.parse("http://a/")+"b" should
	  return "http://a/b" but it returned "http://a//b".

	* uri/generic.rb (Generic#check_path): corrected error message, 
	  @path -> v

Wed Feb  6 17:18:54 2002  Nobuyoshi Nakada  <nobu.nakada@nifty.ne.jp>

	* configure.in: keep old config.h unless changed.

Mon Feb  4 15:38:29 2002  Yukihiro Matsumoto  <matz@ruby-lang.org>

	* object.c (rb_class_real): should not follow ICLASS link

	* variable.c (classname): should follow ICLASS link explicitly.

Thu Jan 31 20:45:33 2002  Nobuyoshi Nakada  <nobu.nakada@nifty.ne.jp>

	* lib/mkmf.rb (dir_config): prior --with flag.

	* lib/mkmf.rb (arg_config): avoid special variables for
	  font-lock-mode.

Wed Jan 30 13:37:05 2002  Yukihiro Matsumoto  <matz@ruby-lang.org>

	* re.c (rb_reg_search): should set regs.allocated.
