@@ -1293,6 +1293,10 @@ rb_big_rshift(x, y)
 	else
 	    return INT2FIX(-1);
     }
+    if (!RBIGNUM(x)->sign) {
+	x = rb_big_clone(x);
+	rb_big_2comp(x);
+    }
     xds = BDIGITS(x);
     i = RBIGNUM(x)->len; j = i - s1;
     z = bignew(j, RBIGNUM(x)->sign);
@@ -1301,6 +1305,9 @@ rb_big_rshift(x, y)
 	num = (num | xds[i]) >> s2;
 	zds[j] = BIGLO(num);
 	num = BIGUP(xds[i]);
+    }
+    if (!RBIGNUM(x)->sign) {
+	rb_big_2comp(z);
     }
     return bignorm(z);
 }
