@@ -1,4 +1,4 @@
 #define RUBY_VERSION "1.6.6"
-#define RUBY_RELEASE_DATE "2002-02-14"
+#define RUBY_RELEASE_DATE "2002-02-15"
 #define RUBY_VERSION_CODE 166
-#define RUBY_RELEASE_CODE 20020214
+#define RUBY_RELEASE_CODE 20020215
